[package]
name = "lovett"
version = "0.1.0"
authors = ["David P. Smith"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rppal = "0.11.3"
framebuffer = "0.2.0"
image = "0.23.8"
rusttype = "0.9.2"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
log = "0.4"
serde = { version = "1.0.116", features = ["derive"]}
bincode = "1.3.1"
glyph_brush_layout = "0.2.0"
glyph_brush_draw_cache = "0.1.3"
